# MoMEMta-hh-bbtautau

./: CMakeLists.txt  lxplus_batch.py  ttbar_ME
MatrixElements/hh_bbtautau_ME/: CMakeLists.txt
MatrixElements/hh_bbtautau_ME/SubProcesses/P1_Sigma_SMEFT_FF_2_gg_bbxtaptam/: P1_Sigma_SMEFT_FF_2_gg_bbxtaptam.cc  P1_Sigma_SMEFT_FF_2_gg_bbxtaptam.h
MatrixElements/hh_bbtautau_ME/include/: HelAmps_SMEFT_FF_2.h  Parameters_SMEFT_FF_2.h  SubProcess.h  coupl.inc
MatrixElements/hh_bbtautau_ME/src/: HelAmps_SMEFT_FF_2.cc  Parameters_SMEFT_FF_2.cc  VVSS2_0.f  VVSS3_0.f
MatrixElements/hh_bbtautau_UFO/: CMakeLists.txt
MatrixElements/hh_bbtautau_UFO/SubProcesses/P1_Sigma_SMEFT_UFO_gg_bbxtaptam/: P1_Sigma_SMEFT_UFO_gg_bbxtaptam.cc  P1_Sigma_SMEFT_UFO_gg_bbxtaptam.h
MatrixElements/hh_bbtautau_UFO/include/: HelAmps_SMEFT_UFO.h  Parameters_SMEFT_UFO.h  SubProcess.h
MatrixElements/hh_bbtautau_UFO/src/: HelAmps_SMEFT_UFO.cc  Parameters_SMEFT_UFO.cc
MatrixElements/ttbar_mu_tau/: CMakeLists.txt
MatrixElements/ttbar_mu_tau/SubProcesses/P1_Sigma_sm_gg_tapvtbmumvmxbx/: P1_Sigma_sm_gg_tapvtbmumvmxbx.cc  P1_Sigma_sm_gg_tapvtbmumvmxbx.h
MatrixElements/ttbar_mu_tau/include/: HelAmps_sm.h  Parameters_sm.h  SubProcess.h
MatrixElements/ttbar_mu_tau/src/: HelAmps_sm.cc  Parameters_sm.cc
core/src/: MoMEMta.cc
examples/: hh_bbbb.cc  hh_bbtautau.cc  hh_bbtautau.lua  hh_bbtautau_UFO.cc  hh_bbtautau_UFO.lua  hh_bbtautau_test.cc  ttbar_mu_tau.cc  ttbar_mu_tau.lua  ttbar_mu_tau_test.cc
include/momemta/: MoMEMta.h
modules/: BlockG.cc  BuildInitialState.cc  GaussianTransferFunctionOnEnergy.cc  MatrixElement.cc
